// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.env
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "install": Object {
        "category": "00.build",
        "description": "Install and upgrade dependencies",
        "env": Object {
          "PATH": "$(echo /var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-2Sp0TE/.env/bin:$PATH)",
          "PYTHONHOME": "",
          "VIRTUAL_ENV": "/var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-2Sp0TE/.env",
        },
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "setup-env": Object {
        "category": "99.misc",
        "description": "Setup the project's python environment",
        "name": "setup-env",
        "steps": Array [
          Object {
            "exec": "/usr/bin/python -m venv .env",
          },
          Object {
            "say": "Environment successfully created.",
          },
        ],
      },
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "env": Object {
          "PATH": "$(echo /var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-2Sp0TE/.env/bin:$PATH)",
          "PYTHONHOME": "",
          "VIRTUAL_ENV": "/var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-2Sp0TE/.env",
        },
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "test_python-project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test_python-project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test_python-project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
  "tests/__init__.py": "",
  "tests/test_example.py": "import pytest

from test_python-project.example import hello

@pytest.mark.parametrize(
    (\\"name\\", \\"expected\\"),
    [
        (\\"A. Musing\\", \\"Hello A. Musing!\\"),
        (\\"traveler\\", \\"Hello traveler!\\"),
        (\\"projen developer\\", \\"Hello projen developer!\\"),
    ],
)
def test_hello(name, expected):
    \\"\\"\\"Example test with parametrization.\\"\\"\\"
    assert hello(name) == expected
",
}
`;

exports[`dependencies 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.env
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "aws-cdk.core",
        "type": "runtime",
        "version": "*",
      },
      Object {
        "name": "Django",
        "type": "runtime",
        "version": "3.1.5",
      },
      Object {
        "name": "hypothesis",
        "type": "test",
        "version": "^6.0.3",
      },
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "install": Object {
        "category": "00.build",
        "description": "Install and upgrade dependencies",
        "env": Object {
          "PATH": "$(echo /var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-iN3JLq/.env/bin:$PATH)",
          "PYTHONHOME": "",
          "VIRTUAL_ENV": "/var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-iN3JLq/.env",
        },
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "setup-env": Object {
        "category": "99.misc",
        "description": "Setup the project's python environment",
        "name": "setup-env",
        "steps": Array [
          Object {
            "exec": "/usr/bin/python -m venv .env",
          },
          Object {
            "say": "Environment successfully created.",
          },
        ],
      },
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "env": Object {
          "PATH": "$(echo /var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-iN3JLq/.env/bin:$PATH)",
          "PYTHONHOME": "",
          "VIRTUAL_ENV": "/var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-iN3JLq/.env",
        },
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
hypothesis>=6.0.3, <7.0.0
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws-cdk.core>=0.0.0
Django==3.1.5
",
  "test_python-project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test_python-project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test_python-project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
  "tests/__init__.py": "",
  "tests/test_example.py": "import pytest

from test_python-project.example import hello

@pytest.mark.parametrize(
    (\\"name\\", \\"expected\\"),
    [
        (\\"A. Musing\\", \\"Hello A. Musing!\\"),
        (\\"traveler\\", \\"Hello traveler!\\"),
        (\\"projen developer\\", \\"Hello projen developer!\\"),
    ],
)
def test_hello(name, expected):
    \\"\\"\\"Example test with parametrization.\\"\\"\\"
    assert hello(name) == expected
",
}
`;

exports[`dependencies via ctor 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.env
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "aws-cdk.core",
        "type": "runtime",
        "version": "*",
      },
      Object {
        "name": "Django",
        "type": "runtime",
        "version": "3.1.5",
      },
      Object {
        "name": "hypothesis",
        "type": "test",
        "version": "^6.0.3",
      },
      Object {
        "name": "pytest",
        "type": "test",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "install": Object {
        "category": "00.build",
        "description": "Install and upgrade dependencies",
        "env": Object {
          "PATH": "$(echo /var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-U2FbJ2/.env/bin:$PATH)",
          "PYTHONHOME": "",
          "VIRTUAL_ENV": "/var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-U2FbJ2/.env",
        },
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "setup-env": Object {
        "category": "99.misc",
        "description": "Setup the project's python environment",
        "name": "setup-env",
        "steps": Array [
          Object {
            "exec": "/usr/bin/python -m venv .env",
          },
          Object {
            "say": "Environment successfully created.",
          },
        ],
      },
      "test": Object {
        "category": "10.test",
        "description": "Runs tests",
        "env": Object {
          "PATH": "$(echo /var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-U2FbJ2/.env/bin:$PATH)",
          "PYTHONHOME": "",
          "VIRTUAL_ENV": "/var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-U2FbJ2/.env",
        },
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
hypothesis>=6.0.3, <7.0.0
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws-cdk.core>=0.0.0
Django==3.1.5
",
  "test_python-project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test_python-project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test_python-project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
  "tests/__init__.py": "",
  "tests/test_example.py": "import pytest

from test_python-project.example import hello

@pytest.mark.parametrize(
    (\\"name\\", \\"expected\\"),
    [
        (\\"A. Musing\\", \\"Hello A. Musing!\\"),
        (\\"traveler\\", \\"Hello traveler!\\"),
        (\\"projen developer\\", \\"Hello projen developer!\\"),
    ],
)
def test_hello(name, expected):
    \\"\\"\\"Example test with parametrization.\\"\\"\\"
    assert hello(name) == expected
",
}
`;

exports[`no pytest 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.env
node_modules/
!/.projen/deps.json
!/.projen/tasks.json
!/requirements-dev.txt
!/requirements.txt
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "install": Object {
        "category": "00.build",
        "description": "Install and upgrade dependencies",
        "env": Object {
          "PATH": "$(echo /var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-QmTuGl/.env/bin:$PATH)",
          "PYTHONHOME": "",
          "VIRTUAL_ENV": "/var/folders/f6/q6wlhk2d6hn_ylbn9rd4m24w0000gn/T/projen-test-QmTuGl/.env",
        },
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "setup-env": Object {
        "category": "99.misc",
        "description": "Setup the project's python environment",
        "name": "setup-env",
        "steps": Array [
          Object {
            "exec": "/usr/bin/python -m venv .env",
          },
          Object {
            "say": "Environment successfully created.",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "test_python-project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test_python-project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test_python-project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
}
`;
